updated profile page, added scoped status updates

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -10,4 +10,8 @@ daniel:
  email: test1@test.com
  profile_name: jacksonvoice1
 
-
+jackson:
+ first_name: Bill
+ last_name: Jackson
+ email: test2@test.com
+ profile_name: bilbo
